# 3X-UI-BASE_FOR_VPN

./: alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 02ec7599e0d9_add_all.py  1d51b4f2e0a0_create_subscriptions.py  408bc7b267a6_fixed.py  5d398deec7de_initial_migration.py  78c74a93851a_create_subscriptions.py  d8a28c63ccd5_add_subscription_relation.py  db403c6fc400_fixed_sec_del.py  e6d0ef72f679_fixed_sec.py
api/schemas/: server.py
app/: alembic.ini  config.py  main.py
app/api/: payment.py  server.py  subcription.py  user.py
app/core/: database.py  init_tables.py
app/crud/: payment.py  server.py  subcription.py  user.py
app/models/: payment.py  server.py  subscription.py  user.py
app/schemas/: payment.py  server.py  subscription.py  user.py
src/config/: config.py
src/cruds/: payment_crud.py  subs_crud.py  user_crud.py
src/db/: database.py  db_config.py
src/db/models/: __init__.py  info.txt  payments.py  relationships.py  subscription.py  user.py
src/routes/: payments_routers.py  sub_routers.py  user_routers.py
src/schemas/: payment_schema.py  subs_schema.py  user_schemas.py
src/xui/: base.py  clients.py  inbounds.py
